--- a/css/prueba.css
+++ b/css/prueba.css
@@ -17,7 +17,7 @@ ul {
   top: 0;
   display: flex;
   font-size: medium;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS", "sans-serif";
   text-align: center;
   overflow: hidden;
   list-style-type: none; }
@@ -40,9 +40,9 @@ h1.primertitulo {
 
 p.primerparrafo {
   margin-left: 1%;
-  font-size: large; }
+  padding-top: 0px; }
 
-div.grillaindex {
+div.grillaindex, div.imagenespasarela {
   display: grid;
   padding-bottom: 30px;
   grid-template-columns: 1fr 1fr 1fr;
@@ -51,11 +51,8 @@ div.grillaindex {
   align-items: flex-end; }
 
 div.imagenespasarela {
-  display: grid;
-  align-items: flex-end;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 800px 20px 800px 20px 800px 20px 800px 20px 800px 20px 1100px 20px 800px 20px 800px 20px 1100px 20px 800px 20px;
-  padding-bottom: 30px;
   background-image: linear-gradient(to bottom, white 95%, #383737); }
 
 #imagen1 {
@@ -103,13 +100,11 @@ h3 {
     flex-direction: column; }
   h1.primertitulo {
     margin-left: 1%;
-    padding-bottom: 100px; }
+    padding-top: 100px; }
   p.primerparrafo {
     margin-left: 1%;
-    margin-top: 1%;
-    padding-top: 50px;
-    font-size: large; }
-  div.grillaindex {
+    padding-top: 50px; }
+  div.grillaindex, div.imagenespasarela {
     grid-template-columns: 100%;
     grid-template-rows: 500px 35px 500px 35px;
     align-items: flex-end;
@@ -131,8 +126,8 @@ h3 {
     top: 0; }
   h1.primertitulo {
     margin-left: 1%;
-    padding-bottom: 20px; }
-  div.grillaindex {
+    padding-top: 20px; }
+  div.grillaindex, div.imagenespasarela {
     grid-template-columns: 100%;
     grid-template-rows: 600px 35px 600px 35px;
     align-items: flex-end;
