--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -140,6 +140,45 @@ h3 {
 	#imagen2 {
 		@include Imagenes;
 	}
+
+
+#maquillaje2 {
+		width: 440px;
+		height: 410px;
+	}
+
+	#maquillaje4 {
+		width: 400px;
+		height: 529px;
+	}
+
+	#maquillaje5{
+		width: 400px;
+		height: 489px;
+	}
+
+
+	div.imagenespasarela{
+		grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 570px 35px 570px 35px 570px 35px 570px 35px 570px 35px 570px 35px 570px 35px 570px 35px 570px 35px 570px 35px;
+	}
+
+
+	#pasarela1 {
+		width: 300px;
+		height: 550px;
+	}
+	#pasarela2 {
+		width: 280px;
+		height: 520px;
+	}
+
+	#pasarela3 {
+		width: 382px;
+		height: 524px;
+	}
+	
+
 }
 @media (min-width:576px) and (max-width:768px) {
 	nav {
@@ -165,6 +204,8 @@ h3 {
 	#imagen2 {
 		@include Imagenes;
 	}
+
+	
 }
 
 
