--- a/css/prueba.css
+++ b/css/prueba.css
@@ -2,37 +2,34 @@
   margin: 0%;
   padding: 0; }
 
-nav {
-  width: 100%;
-  align-items: center;
-  text-align: center;
-  background-color: black;
-  position: fixed;
-  top: 0; }
+.nav__responsive-ul {
+  display: none; }
 
-ul {
-  width: 100%;
-  height: 100%;
-  position: sticky;
-  top: 0;
-  display: flex;
-  font-size: medium;
-  font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS", "sans-serif";
-  text-align: center;
-  overflow: hidden;
-  list-style-type: none; }
+.nav {
+  background-color: black; }
 
-li {
-  font: white;
-  float: left; }
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+.nav__li {
+  display: inline-block;
+  padding: 15px; }
+  .nav__li:hover > a {
+    color: palevioletred;
     transition: all 0.7s; }
-    li a:hover {
-      background-color: palevioletred; }
+  .nav__li a {
+    color: white;
+    text-decoration: none; }
+
+.nav__responsive-button-container {
+  position: absolute;
+  width: 100%;
+  font-size: 25px;
+  background-color: black;
+  margin-top: -64px; }
+
+.nav__responsive-button {
+  padding: 6px 20px;
+  text-align: left;
+  width: 100%;
+  color: palevioletred; }
 
 h1.primertitulo {
   margin-left: 1%;
@@ -69,10 +66,21 @@ div.imagenespasarela {
   padding-bottom: 30px;
   background-image: linear-gradient(to bottom, white 90%, #383737); }
 
+div.preguntas {
+  width: 70%;
+  margin-left: 20px;
+  margin-bottom: 40px; }
+
+main.proximosShows {
+  margin-left: 20px;
+  margin-bottom: 40px;
+  margin-top: 0px; }
+
 footer {
   width: 100%;
+  height: 70px;
   display: grid;
-  grid-template-columns: 100%;
+  grid-template-columns: 1fr 1fr 1fr;
   background-color: black;
   position: absolute;
   text-align: center;
@@ -82,22 +90,35 @@ h3 {
   color: white; }
 
 @media (min-width: 200px) and (max-width: 576px) {
-  nav {
-    height: 245px;
+  .nav__ul {
+    display: none; }
+  .nav {
+    height: 37px;
+    width: 100%; }
+  .nav__responsive-ul {
+    display: block;
+    list-style: none;
+    position: absolute;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: black;
-    bottom: 20px; }
-  ul {
-    position: sticky;
-    display: flex;
-    font-size: medium;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-    overflow: hidden;
-    list-style-type: none;
-    flex-direction: column; }
+    margin-top: 37px;
+    padding-top: 27px;
+    height: 37px; }
+    .nav__responsive-ul:hover > .nav__li-container {
+      top: -27px; }
+  .nav__li-container {
+    position: relative;
+    top: -1000px;
+    height: calc(100vh - 64px);
+    background-color: #141414;
+    transition: all 1s;
+    width: 75%;
+    padding-top: 27px; }
+  .nav__responsive-li {
+    width: 100%;
+    padding: 9px 20px; }
+    .nav__responsive-li a {
+      color: white;
+      text-decoration: none; }
   h1.primertitulo {
     margin-left: 1%;
     padding-top: 100px; }
