--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -16,43 +16,40 @@
 	margin: 0%;
 	padding: 0;
 }
-nav {
-	width: 100%;
-	align-items: center;
-	text-align: center;
+
+.nav__responsive-ul {
+	display: none;
+}
+.nav {
 	background-color: $colorprimario;
-	position: fixed;
-	top: 0;
 }
-ul {
-	width: 100%;
-	height: 100%;
-	position: sticky;
-	top: 0;
-	display: flex;
-	font-size: medium;
-	font-family: $fuenteLetra;
-	text-align: center;
-	overflow: hidden;
-	list-style-type: none;
-}
-li {
-	font: $colorsecundario;
-	float: left;
-	a {
-		display: block;
-		color: $colorsecundario;
-		text-align: center;
-		padding: 14px 16px;
-		transition: all 0.7s;
-		&:hover {
-			background-color: $colorterciario;
+.nav__li {
+	display: inline-block;
+	padding: 15px;
+	&:hover {
+		>a {
+			color: $colorterciario;
+			transition: all 0.7s;
 		}
 	}
+	a {
+		color: white;
+		text-decoration: none;
+	}
 }
-
-
-
+.nav__responsive-button-container {
+	position: absolute;
+	width: 100%;
+	font-size: 25px;
+	background-color: rgb(0, 0, 0);
+	margin-top: -64px;
+}
+.nav__responsive-button {
+	padding: 6px 20px;
+	text-align: left;
+	width: 100%;
+	color: $colorterciario;
+}
 
 
 h1.primertitulo {
@@ -90,10 +87,23 @@ grid-template-columns: 1fr 1fr 1fr;
 	padding-bottom: 30px;
 	background-image: linear-gradient(to bottom, $colorsecundario 90%, rgb(56, 55, 55));
 }
+
+div.preguntas{
+	width: 70%;
+	margin-left: 20px;
+	margin-bottom: 40px;
+}
+
+main.proximosShows{
+	margin-left: 20px;
+	margin-bottom: 40px;
+	margin-top: 0px;
+}
 footer {
 	width: 100%;
+	height: 70px;
 	display: grid;
-	grid-template-columns: 100%;
+	grid-template-columns: 1fr 1fr 1fr;
 	background-color: $colorprimario;
 	position: absolute;
 	text-align: center;
@@ -103,24 +113,49 @@ h3 {
 	color: $colorsecundario;
 }
 @media (min-width:200px) and (max-width:576px) {
-	nav {
-		height: 245px;
+
+	.nav__ul {
+		display: none;
+	}
+	.nav {
+		height: 37px;
 		width: 100%;
-		display: flex;
-		flex-direction: column;
-		background-color: $colorprimario;
-		bottom: 20px;
 	}
-	ul {
-		position: sticky;
-		display: flex;
-		font-size: medium;
-		font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-		text-align: center;
-		overflow: hidden;
-		list-style-type: none;
-		flex-direction: column;
+	.nav__responsive-ul {
+		display: block;
+		list-style: none;
+		position: absolute;
+		width: 100%;
+		margin-top: 37px;
+		padding-top: 27px;
+		height: 37px;
+		&:hover {
+			>.nav__li-container {
+				top: -27px;
+			}
+		}
 	}
+	.nav__li-container {
+		position: relative;
+		top: -1000px;
+		height: calc(100vh - 64px);
+		background-color: rgb(20, 20, 20);
+		transition: all 1s;
+		width: 75%;
+		padding-top: 27px;
+	}
+	.nav__responsive-li {
+		width: 100%;
+		padding: 9px 20px;
+		a {
+			color: $colorsecundario;
+			text-decoration: none;
+		}
+	}
+
+
+		
+	
 	h1.primertitulo {
 		@include priTitulo( 100px);
 	}
